# MCTTK

./: .dockerignore  .env.example  .env.sample  .gitignore  DOCKER.md  Dockerfile  Dockerfile.git  README.md  config.json  converter.py  docker-compose.yml  glossary.json  init_state.py  main.py  modules_config.json  poster.py  pyproject.toml  scheduler.py  scraper.py  utils.py
.github/workflows/: ci.yml
output/: .posted.json  .state.json  news_Minecraft_26.1_Release_Candidate_1_2026-03-19_16_51_00.json  news_Minecraft_26.1_Release_Candidate_2_2026-03-20_15_00_00.json
tests/: test_config_json.py  test_converter.py  test_glossary_json.py  test_scraper.py  test_utils.py
